# lotus_zju

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  TOOLS.md  conanfile.py  genindex.html  index.html  newtProgAn_extracted.txt  objects.inv  search.html  searchindex.js  unit_tests.sh
examples/: CMakeLists.txt  EGraphExample.cpp
examples/how-to/build-call-graph/: README.md
examples/how-to/build-pdg/: PDGExample.cpp
examples/how-to/query-alias-info/: PointerAnalysisExample.cpp  README.md
examples/how-to/run-concurrency-checker/: README.md  concurrent.c
examples/how-to/run-ifds-analysis/: README.md
examples/how-to/run-npa-analysis/: README.md
examples/how-to/run-taint-analysis/: README.md  taint.c
examples/pdg-queries/: example-queries.txt
lib/Alias/: CMakeLists.txt  README.md
lib/Alias/AliasAnalysisWrapper/: AliasAnalysisConfigParser.cpp  AliasAnalysisFactory.cpp  AliasAnalysisWrapper.cpp  AliasAnalysisWrapperBackend.cpp  AliasAnalysisWrapperCore.cpp  AliasAnalysisWrapperQueries.cpp  CLIUtils.cpp  CMakeLists.txt  README.md
lib/Alias/AllocAA/: AllocAA.cpp  CMakeLists.txt  MemorySite.cpp
lib/Alias/Andersen/: Andersen.cpp  AndersenAA.cpp  ConstraintCollect.cpp  ConstraintOptimize.cpp  ConstraintSolving.cpp  ExternalLibrary.cpp  NodeFactory.cpp  README.md
lib/Alias/AserPTA/: CMakeLists.txt  README.md
lib/Alias/BDD/: BDDPtsSet.cpp  CMakeLists.txt
lib/Alias/CFLAA/: CFLAndersAliasAnalysis.cpp  CFLModuleAliasAnalysis.cpp  CFLSteensAliasAnalysis.cpp  CMakeLists.txt
lib/Alias/Common/: AliasSpecManager.cpp  AliasSpecManagerQueries.cpp  AliasSpecManagerUtils.cpp  CMakeLists.txt
lib/Alias/DyckAA/: AAAnalyzer.cpp  CMakeLists.txt  DyckAliasAnalysis.cpp  DyckGraph.cpp  DyckModRefAnalysis.cpp  DyckVFG.cpp  DyckValueFlowAnalysis.cpp  MRAnalyzer.cpp
lib/Alias/Dynamic/: CMakeLists.txt  DynamicAliasAnalysis.cpp  DynamicHooks.cpp  FeatureCheck.cpp  IDAssigner.cpp  LogPrinter.cpp  LogReader.cpp  MemoryHooks.c  MemoryInstrument.cpp
lib/Alias/FPA/: CallGraphPass.cpp  Common.cpp  KELPPass.cpp  MLTAPass.cpp  MLTAPassUtil.cpp
lib/Alias/LotusAA/: CMakeLists.txt  CallGraphSolver.cpp  CallGraphState.cpp  FunctionPointerResults.cpp  FunctionSummary.cpp  InterProceduralPass.cpp  IntraProceduralAnalysis.cpp  LotusConfig.cpp  MemObject.cpp  ObjectLocator.cpp  PointsToGraph.cpp  README.md  Utilities.cpp
lib/Alias/OriginAA/: CMakeLists.txt  CallGraph.cpp  ChannelSemantics.cpp  Flags.cpp  KCallsitePointerAnalysis.cpp  OriginPointerAnalysis.cpp  PointerAnalysis.cpp  PointerAnalysisPass.cpp
lib/Alias/Pestrie/: CMakeLists.txt  bit-indexer.cc  bit-pt.cc  bit-querier.cc  bit-se.cc  bitmap.cc  formatter.cc  matrix-ops.cc  obstack.cc  pes-common.cc  pes-dual.cc  pes-indexer.cc  pes-querier.cc  pes-self.cc  profile_helper.cc  qtester.cc  segtree.cc  treap.cc
lib/Alias/SRAA/: CMakeLists.txt  README.md  RangeAnalysis.cpp  StrictRelationAliasAnalysis.cpp  vSSA.cpp
lib/Alias/SparrowAA/: Andersen.cpp  AndersenAA.cpp  CMakeLists.txt  ConstraintCollect.cpp  ConstraintOptimize.cpp  ConstraintSolving.cpp  ExternalLibrary.cpp  NodeFactory.cpp  README.md  ResultUtils.cpp
lib/Alias/Spec/: AliasSpecManager.cpp  AliasSpecManagerQueries.cpp  AliasSpecManagerUtils.cpp  CMakeLists.txt
lib/Alias/TPA/: CMakeLists.txt  README.md
lib/Alias/TypeQualifier/: AAMap.cpp  Annotation.cpp  CMakeLists.txt  CallGraph.cpp  ConstraintCollect.cpp  FuncProcess.cpp  Helper.cpp  NodeFactory.cpp  QualiInference.cpp  QualifierAnalysis.cpp  QualifierCheck.cpp  README.md  StructAnalyzer.cpp
lib/Alias/UnderApproxAA/: Canonical.cpp  EquivDB.cpp  Evaluation.md  README.md  UnderApproxAA.cpp
lib/Alias/seadsa/: AllocSiteInfo.cc  AllocWrapInfo.cc  CMakeLists.txt  DsaAnalysis.cc  DsaBottomUp.cc  (+13 more)
lib/Checker/: CMakeLists.txt  TaintConfigParser.cpp
lib/Dataflow/: CMakeLists.txt
lib/Transform/: AInliner.cpp  CMakeLists.txt  CastElimPass.cpp  ElimPhi.cpp  ExpandAssume.cpp  FlattenInit.cpp  LLVM_Optimizer.cpp  LowerConstantExpr.cpp  LowerGlobalConstantArraySelect.cpp  LowerSelect.cpp  MergeGEP.cpp  MergeReturn.cpp  NameBlock.cpp  README.md  RemoveDeadBlock.cpp  RemoveNoRetFunction.cpp  ReplaceAsserts.cpp  ReplaceUBSan.cpp  SimplifyExtractValue.cpp  SimplifyInsertValue.cpp  SimplifyLatch.cpp  SoftFloat.cpp  UnrollVectors.cpp  Unrolling.cpp
tests/: CMakeLists.txt
tests/sprattus/: double_to_smt.py  extract_config.py  lit.cfg.in
tests/symbolic-abstraction/: convert_old_config.py
tests/unit/: AllocAATest.cpp  AserPTATest.cpp  CMakeLists.txt  EGraphTest.cpp  FPSolveTest.cpp  IFDSSolverTest.cpp  LowerSelectTest.cpp  MIGRATION_GUIDE.md  MonoTest.cpp  README.md  RemoveDeadBlockTest.cpp  SparrowAATest.cpp  SymAbsTest.cpp  TaintAnalysisTest.cpp  WPDSTest.cpp  pdg_slicing_test.cpp
tools/: CMakeLists.txt  index.html
tools/alias/: CMakeLists.txt  ander-aa.cpp  aser-aa.cpp  aser_pta.cpp  call-graph.cpp  dyck-aa.cpp  fpa.cpp  index.html  lotus-aa.cpp  lotus_aa.cpp  origin_aa.cpp  sea-dsa-dg.cpp  seadsa-tool.cpp  sparrow-aa.cpp  tpa.cpp
tools/canary/: CMakeLists.txt  canary.cpp  gvfa-tool.cpp
tools/cfl/: CMakeLists.txt  index.html
tools/checker/: CMakeLists.txt  canary_gvfa.cpp  canary_npa.cpp  ifds_taint.cpp  index.html  kint.cpp  lotus_concur.cpp  lotus_gvfa.cpp  lotus_kint.cpp  lotus_miri.cpp  lotus_taint.cpp  lotus_taint_microbench.cpp  lotus_taint_microbench.h
tools/conftainter/: CMakeLists.txt  conftainter.cpp
tools/csr/: CMakeLists.txt  csr.cpp
tools/esss/: CMakeLists.txt  esss.cpp
tools/graspan/: CMakeLists.txt
tools/gvfa/: CMakeLists.txt  gvfa-tool.cpp
tools/ir/: index.html  pdg-query.cpp
tools/kint/: CMakeLists.txt  kint.cpp
tools/llvm-ai/: CMakeLists.txt  llvm-ai.cpp
tools/mcp/: index.html  mcp.cpp
tools/optimization/: CMakeLists.txt  README.md  index.html  interprocedural.html  lotus-opt.cpp
tools/owl/: CMakeLists.txt  owl.cpp
tools/solver/: CMakeLists.txt  index.html  owl.cpp  slot.cpp  staub.cpp
tools/sprattus/: spranalyze.cpp
tools/taint/: CMakeLists.txt  taint-analyzer.cpp
tools/verifier/: CMakeLists.txt  index.html
(+2105 files in other folders)
