add_subdirectory(DyckAA)
add_subdirectory(CFLAA)
add_subdirectory(seadsa)
add_subdirectory(SparrowAA)
add_subdirectory(BDD)
add_subdirectory(AllocAA)
add_subdirectory(FPA)
add_subdirectory(Dynamic)
add_subdirectory(SRAA)
add_subdirectory(UnderApproxAA)
add_subdirectory(LotusAA)
add_subdirectory(AserPTA)
add_subdirectory(AliasAnalysisWrapper)
add_subdirectory(Spec)